--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "devDependencies": {
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "chai": "^4.3.6",
     "cookie-session": "^2.0.0",
+    "mochai": "^0.2.5",
     "nodemon": "^2.0.19"
   }
 }
