--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "expressServer.js",
   "scripts": {
     "start": "./node_modules/.bin/nodemon -L express_server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "bcryptjs": "^2.4.3",
     "chai": "^4.3.6",
     "cookie-session": "^2.0.0",
+    "mocha": "^10.0.0",
     "mochai": "^0.2.5",
     "nodemon": "^2.0.19"
   }
