--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "morgan": "^1.10.0"
+    "cookie-session": "^2.0.0",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
-    "bcryptjs": "^2.4.3",
     "chai": "^4.3.6",
-    "cookie-session": "^2.0.0",
     "mocha": "^10.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.19"
   }
 }
